notice board updated

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
       <div class="sidebar-content" id="sidebar-list"></div>
     </aside>
 
-    <aside class="notice-board" id="noticeBoard">
+    <!-- <aside class="notice-board" id="noticeBoard">
         <div class="notice-title" onclick="toggleNoticeBoard()">
             <div class="notice-header-content">
-            <!-- <i class="fas fa-times"></i> -->
+            <i class="fas fa-times"></i>
              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" class="crossIcon">
 <path d="M20.8333 1L1 20.8333M20.8333 20.8333L1 1" stroke="white" stroke-width="2" stroke-linecap="round"/>
 </svg>
@@ -126,11 +126,11 @@
         <div class="notice-content">
         <p style="padding: 20px; color: #333;">No new notices at the moment.</p>
     </div>
-    </aside>
+    </aside> -->
 
 
 
-    <!-- <aside class="notice-board" id="noticeBoard">
+    <aside class="notice-board" id="noticeBoard">
     <div class="notice-title" onclick="toggleNoticeBoard()">
         <div class="notice-header-content">
             <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" class="crossIcon">
@@ -142,7 +142,7 @@
     <div class="notice-content">
         <p style="padding: 20px; color: #333;">No new notices at the moment.</p>
     </div>
-</aside> -->
+</aside>
 
  
 
