--- a/index.html
+++ b/index.html
@@ -1,73 +1,3 @@
-<!-- updated jismai vedio show ho rha -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeepThought Task Storyboard</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-    <nav class="navbar">
-        <div class="nav-left">
-            <img src="https://deepthought.education/assets/images/logo/logo.svg" alt="DT Logo" class="logo">
-        </div>
-        <div class="nav-right">
-            <div class="icon-circle"><i class="fas fa-home"></i></div>
-            <div class="icon-circle"><i class="fas fa-tools"></i></div>
-            <div class="icon-circle"><i class="fas fa-bell"></i><span class="notification-badge"></span></div>
-            <div class="profile-pic"><img src="https://via.placeholder.com/40" alt="User"></div>
-            <div class="menu-dots"><i class="fas fa-ellipsis-v"></i></div>
-        </div>
-    </nav>
-
-    <aside class="sidebar-container" id="mySidebar">
-        <div class="sidebar-header">
-            <span class="header-text">Journey Board</span>
-            <button class="toggle-btn" onclick="toggleSidebar()"><i class="fas fa-arrow-right" id="toggleIcon"></i></button>
-        </div>
-        <div class="sidebar-content" id="sidebar-list"></div>
-    </aside>
-
-    <main class="main-body">
-        <div class="header-container">
-            <h2 id="project-title" class="title-text">Technical Project Management</h2>
-            <button class="submit-button" onclick="alert('Task Submitted!')">Submit Task</button>
-        </div>
-        <div class="intro-box">
-            <h3 id="task-title"></h3>
-            <p id="task-desc"></p>
-        </div>
-        <div id="assets-container" class="assets-grid"></div>
-    </main>
-
-    <div class="floating-icons">
-        <div class="f-icon">?</div>
-        <div class="f-icon"><i class="fas fa-users"></i></div>
-        <div class="f-icon"><i class="fas fa-calendar-alt"></i></div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html> 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- updated jismai notice board hai right side wala -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -79,6 +9,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar">
@@ -90,15 +24,36 @@
         />
       </div>
       <div class="nav-right">
-        <div class="icon-circle"><i class="fas fa-home"></i></div>
-        <div class="icon-circle"><i class="fas fa-tools"></i></div>
-        <div class="icon-circle">
+        <div class="icon-circle"><svg width="17" height="18" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M8.23242 3.39844L2.8418 7.85156V12.627C2.8418 12.8906 3.04688 13.0957 3.31055 13.0957H6.5918C6.82617 13.0957 7.03125 12.8906 7.03125 12.627V9.81445C7.03125 9.58008 7.26562 9.3457 7.5 9.3457H9.375C9.63867 9.3457 9.84375 9.58008 9.84375 9.81445V12.627C9.84375 12.8906 10.0781 13.0957 10.3125 13.0957H13.623C13.8574 13.0957 14.0918 12.8906 14.0918 12.627V7.82227L8.67188 3.39844C8.61328 3.33984 8.52539 3.31055 8.4668 3.31055C8.37891 3.31055 8.29102 3.33984 8.23242 3.39844ZM16.7578 6.41602L14.3262 4.39453V0.351562C14.3262 0.146484 14.1504 0 13.9746 0H12.334C12.1289 0 11.9824 0.146484 11.9824 0.351562V2.46094L9.3457 0.292969C9.11133 0.117188 8.78906 0 8.4668 0C8.11523 0 7.79297 0.117188 7.55859 0.292969L0.146484 6.41602C0.0585938 6.47461 0 6.5918 0 6.67969C0 6.76758 0.0585938 6.85547 0.0878906 6.91406L0.849609 7.82227C0.908203 7.91016 0.996094 7.93945 1.11328 7.93945C1.20117 7.93945 1.28906 7.91016 1.34766 7.85156L8.23242 2.19727C8.29102 2.13867 8.37891 2.10938 8.4668 2.10938C8.52539 2.10938 8.61328 2.13867 8.67188 2.19727L15.5566 7.85156C15.6152 7.91016 15.7031 7.93945 15.791 7.93945C15.9082 7.93945 15.9961 7.91016 16.0547 7.82227L16.8164 6.91406C16.875 6.85547 16.9043 6.76758 16.9043 6.67969C16.9043 6.5918 16.8457 6.47461 16.7578 6.41602Z" fill="white"/>
+</svg>
+</div>
+        <div class="icon-circle"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M14.8828 11.8066L11.4551 8.37891C10.752 7.70508 9.75586 7.55859 8.93555 7.96875L5.83008 4.86328V3.01758L2.08008 0.205078L0.205078 2.08008L3.01758 5.83008H4.83398L7.93945 8.96484C7.55859 9.78516 7.67578 10.7812 8.34961 11.4551L11.7773 14.9121C12.2168 15.3223 12.8906 15.3223 13.3301 14.9121L14.8828 13.3594C15.293 12.9199 15.293 12.2461 14.8828 11.8066ZM9.90234 6.79688C10.752 6.79688 11.5137 7.11914 12.0996 7.70508L12.6855 8.29102C13.125 8.08594 13.5645 7.79297 13.9453 7.41211C15.0293 6.32812 15.4102 4.80469 15.0586 3.42773C15 3.16406 14.6777 3.07617 14.4727 3.25195L12.3047 5.44922L10.3125 5.09766L9.99023 3.10547L12.1582 0.9375C12.3633 0.732422 12.2461 0.410156 11.9824 0.351562C10.6055 0 9.08203 0.380859 7.99805 1.46484C7.14844 2.28516 6.76758 3.39844 6.76758 4.48242L9.19922 6.88477C9.43359 6.82617 9.66797 6.79688 9.90234 6.79688ZM6.85547 9.19922L5.21484 7.55859L0.732422 12.0117C0 12.7441 0 13.9453 0.732422 14.6777C1.46484 15.4102 2.66602 15.4102 3.39844 14.6777L7.00195 11.0449C6.79688 10.459 6.70898 9.84375 6.85547 9.19922ZM2.08008 14.0332C1.66992 14.0332 1.37695 13.7402 1.37695 13.3301C1.37695 12.9492 1.66992 12.627 2.08008 12.627C2.46094 12.627 2.7832 12.9492 2.7832 13.3301C2.7832 13.7402 2.46094 14.0332 2.08008 14.0332Z" fill="white"/>
+</svg>
+</div>
+        <div class="icon-circle notification-icon">
           <i class="fas fa-bell"></i><span class="notification-badge"></span>
         </div>
         <div class="profile-pic">
-          <img src="https://via.placeholder.com/40" alt="User" />
+          <img src="profileImg.jpg" alt="ProfilePic" class="ProfilePic"/>
+
         </div>
-        <div class="menu-dots"><i class="fas fa-ellipsis-v"></i></div>
+
+
+        <div class="menu-dots">
+            <svg width="4" height="3" viewBox="0 0 4 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+<ellipse cx="1.51347" cy="1.49619" rx="1.51347" ry="1.49619" fill="#3683F0"/>
+</svg>
+<svg width="4" height="3" viewBox="0 0 4 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+<ellipse cx="1.51347" cy="1.49619" rx="1.51347" ry="1.49619" fill="#3683F0"/>
+</svg>
+<svg width="4" height="3" viewBox="0 0 4 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+<ellipse cx="1.51347" cy="1.49619" rx="1.51347" ry="1.49619" fill="#3683F0"/>
+</svg>
+
+        </div>
+
       </div>
     </nav>
 
@@ -111,22 +66,6 @@
       </div>
       <div class="sidebar-content" id="sidebar-list"></div>
     </aside>
-
-    <!-- <aside class="notice-board" id="noticeBoard">
-        <div class="notice-title" onclick="toggleNoticeBoard()">
-            <div class="notice-header-content">
-            <i class="fas fa-times"></i>
-             <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" class="crossIcon">
-<path d="M20.8333 1L1 20.8333M20.8333 20.8333L1 1" stroke="white" stroke-width="2" stroke-linecap="round"/>
-</svg>
-
-            <span>N<br>o<br>t<br>i<br>c<br>e<br><br>B<br>o<br>a<br>r<br>d</span>
-        </div>
-        </div>
-        <div class="notice-content">
-        <p style="padding: 20px; color: #333;">No new notices at the moment.</p>
-    </div>
-    </aside> -->
 
 
 
